feat: Images and videos implemented

--- a/code/version 2.0/src/styles/index.css
+++ b/code/version 2.0/src/styles/index.css
@@ -187,19 +187,19 @@ body {
 }
 
 /*Sanscrit Translations*/ 
-.SanskritTranslation{
+.sanskritTranslation{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 5vh;
   align-self: center;
   background-color: white;
   border-radius: 20px;
   box-shadow: 3px 3px 8px 0.01px rgba(106, 106, 106, 0.75);
-  padding: 10px 20px 10px 20px;
-  width: 70%;
+  padding: 10px 10px 10px 10px;
+  width: 90%;
   font-family: 'Poppins';
+  height: 350px;
 }
 
 h2{
@@ -256,15 +256,15 @@ h2{
 }
 
 /*English Spanish*/
-.EnlishSpanishContainer{
+.enlishSpanishContainer{
   display: flex;
   justify-content: space-between;
-  align-self: center;
-  width: 70%;
+  align-self: left;
+  width: 90%;
   font-family: 'Poppins';
 }
 
-.TranslationContainer{
+.translationContainer{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -277,9 +277,10 @@ h2{
   padding: 30px 20px 30px 20px;
   width: 49%;
   font-family: 'Poppins';
+
 }
 
-.TranslationContainer__result{
+.translationContainer__result{
   font-weight: 400;
   font-size: 1.3em;
   text-align: center;
@@ -290,5 +291,63 @@ h2{
   margin-top: 15px;
 }
 
+/* 
+Main
+*/
+
+main {
+  margin-top: 5vh;
+  display: flex;
+  width: 100%;
+}
+
+.main__left{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/*
+main-right
+*/
+.main_right{
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/*Images and Videos*/
+.posturePicture__i, .postureVideo__i {
+  background-color: var(--color-primary);
+  border-radius: 20px;
+  position: relative;
+  width: 50px;
+  height: 36px;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.posturePicture__imgContainer, .postureVideo__videoContainer{
+  position: relative;
+  border: 2px solid var(--color-primary);
+  top: -20px;
+  z-index: 1;
+  border-radius: 20px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+}
+
+.posturePicture__img, .postureVideo__video{
+  height: 250px;
+  border-radius: 20px;
+}
 
 
