--- a/code/version 2.0/public/styles/index.css
+++ b/code/version 2.0/public/styles/index.css
@@ -9,7 +9,7 @@
 
 body {
   padding-top: 0;
-  background-image: url('../assets/background.jpeg');
+  background-image: url('../images/background.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
